--- a/src/index.html
+++ b/src/index.html
@@ -33,10 +33,10 @@
                         <span class="about__author">— Louis Kahn</span>
                     </div>
                     <div class="col-4">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. </p>
+                        <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. </p>
                     </div>
                     <div class="col-4">
-                        <p>Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. Donec vel ultricies purus. Nam dictum sem, eu aliquam ipsum.</p>
+                        <p class="about__text">Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. Donec vel ultricies purus. Nam dictum sem, eu aliquam ipsum.</p>
                     </div>
                 </div>
                  <!--/ row-->
@@ -44,13 +44,181 @@
                 <div class="row">
                     <div class="col-4">
                         <div class="worker">
+
                             <div class="worker__photo">
-                                <img src="img/worker1.jpg" alt="worker1">
+
+                                <div class="worker__container-for-flip worker__container-for-flip--front">
+                                    <img src="img/worker1.jpg" alt="worker1">
+                                </div>
+
+                                <div class="worker__container-for-flip worker__skills">
+                                    <h5 class="worker__skills-title">
+                                        Skills
+                                    </h5>
+                                    <p class="worker__skills-text">
+                                        Curabitur iaculis accumsan augue, nec finibus mauris pretium eu. Duis placerat ex gravida nibh tristique porta.
+                                    </p>
+                                    <ul class="worker__skills-list">
+                                        <li class="worker__skills-list-item">
+                                            <span class="worker__skills-list-item-name">Branding</span>
+                                            <div class="worker__skills-list-item-progress-bar">
+                                                <div class="worker__skills-list-item-progress" style="width: 70%"></div>
+                                            </div>
+                                        </li>
+                                        <li class="worker__skills-list-item">
+                                            <span class="worker__skills-list-item-name">Design</span>
+                                            <div class="worker__skills-list-item-progress-bar">
+                                                <div class="worker__skills-list-item-progress" style="width: 79%"></div>
+                                            </div>
+                                        </li>
+                                        <li class="worker__skills-list-item">
+                                            <span class="worker__skills-list-item-name">Development</span>
+                                            <div class="worker__skills-list-item-progress-bar">
+                                                <div class="worker__skills-list-item-progress" style="width: 50%"></div>
+                                            </div>
+                                        </li>
+                                        <li class="worker__skills-list-item">
+                                            <span class="worker__skills-list-item-name">Photography</span>
+                                            <div class="worker__skills-list-item-progress-bar">
+                                                <div class="worker__skills-list-item-progress" style="width: 90%"></div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                            </div>
+
+                            <div class="worker__info">
+                                <h5 class="worker__name">Thomas Rhythm</h5>
+                                <span class="worker__position">Art Director</span>
                             </div>
                         </div>
                     </div>
-                    <div class="col-4"></div>
-                    <div class="col-4"></div>
+                    <!-- /col-4-->
+                    <div class="col-4">
+                        <div class="worker">
+
+                            <div class="worker__photo">
+
+                                <div class="worker__container-for-flip worker__container-for-flip--front">
+                                    <img src="img/worker2.jpg" alt="worker2">
+                                </div>
+
+                                <div class="worker__container-for-flip worker__skills">
+                                    <h5 class="worker__skills-title">
+                                        Skills
+                                    </h5>
+                                    <p class="worker__skills-text">
+                                        Curabitur iaculis accumsan augue, nec finibus mauris pretium eu. Duis placerat ex gravida nibh tristique porta.
+                                    </p>
+                                    <ul class="worker__skills-list">
+                                        <li class="worker__skills-list-item">
+                                            <span class="worker__skills-list-item-name">Branding</span>
+                                            <div class="worker__skills-list-item-progress-bar">
+                                                <div class="worker__skills-list-item-progress" style="width: 70%"></div>
+                                            </div>
+                                        </li>
+                                        <li class="worker__skills-list-item">
+                                            <span class="worker__skills-list-item-name">Design</span>
+                                            <div class="worker__skills-list-item-progress-bar">
+                                                <div class="worker__skills-list-item-progress" style="width: 79%"></div>
+                                            </div>
+                                        </li>
+                                        <li class="worker__skills-list-item">
+                                            <span class="worker__skills-list-item-name">Development</span>
+                                            <div class="worker__skills-list-item-progress-bar">
+                                                <div class="worker__skills-list-item-progress" style="width: 50%"></div>
+                                            </div>
+                                        </li>
+                                        <li class="worker__skills-list-item">
+                                            <span class="worker__skills-list-item-name">Photography</span>
+                                            <div class="worker__skills-list-item-progress-bar">
+                                                <div class="worker__skills-list-item-progress" style="width: 90%"></div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                            </div>
+
+                            <div class="worker__info">
+                                <h5 class="worker__name">Marta Laning</h5>
+                                <span class="worker__position">Web engineer</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /col-4-->
+                    <div class="col-4">
+                        <div class="worker">
+
+                            <div class="worker__photo">
+
+                                <div class="worker__container-for-flip worker__container-for-flip--front">
+                                    <img src="img/worker3.jpg" alt="worker3">
+                                </div>
+
+                                <div class="worker__container-for-flip worker__skills">
+                                    <h5 class="worker__skills-title">
+                                        Skills
+                                    </h5>
+                                    <p class="worker__skills-text">
+                                        Curabitur iaculis accumsan augue, nec finibus mauris pretium eu. Duis placerat ex gravida nibh tristique porta.
+                                    </p>
+                                    <ul class="worker__skills-list">
+                                        <li class="worker__skills-list-item">
+                                            <span class="worker__skills-list-item-name">Branding</span>
+                                            <div class="worker__skills-list-item-progress-bar">
+                                                <div class="worker__skills-list-item-progress" style="width: 70%"></div>
+                                            </div>
+                                        </li>
+                                        <li class="worker__skills-list-item">
+                                            <span class="worker__skills-list-item-name">Design</span>
+                                            <div class="worker__skills-list-item-progress-bar">
+                                                <div class="worker__skills-list-item-progress" style="width: 79%"></div>
+                                            </div>
+                                        </li>
+                                        <li class="worker__skills-list-item">
+                                            <span class="worker__skills-list-item-name">Development</span>
+                                            <div class="worker__skills-list-item-progress-bar">
+                                                <div class="worker__skills-list-item-progress" style="width: 50%"></div>
+                                            </div>
+                                        </li>
+                                        <li class="worker__skills-list-item">
+                                            <span class="worker__skills-list-item-name">Photography</span>
+                                            <div class="worker__skills-list-item-progress-bar">
+                                                <div class="worker__skills-list-item-progress" style="width: 90%"></div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                            </div>
+
+                            <div class="worker__info">
+                                <h5 class="worker__name">Steve ANDERS</h5>
+                                <span class="worker__position">Developer</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /col-4-->
+                </div>
+            </div>
+        </section>
+        <!-- / section about-->
+        <section class="lets-talk bg-black">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <h3 class="lets-talk__title">
+                            Looking for exclusive digital services?
+                        </h3>
+                        <p class="lets-talk__text">Proin fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor.
+                            Integer non dapibus diam, ac eleifend lectus.</p>
+                        <button class="btn">lets talk</button>
+                    </div>
+                    <div class="col-6">
+                        <img class="lets-talk__img" src="img/monitor.png" alt="iMac-monitor">
+                    </div>
                 </div>
             </div>
         </section>
