--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,9 @@
     <title>LP</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400,700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/fontawesome.min.css">
+    <link rel="stylesheet" href="css/et-line.css">
     <link rel="stylesheet" href="css/style.css">
 
 <!--    <link type="image/png" rel="shortcut icon" href="img/logo16.ico">-->
@@ -43,22 +44,22 @@
     <main>
         <section id="about" class="about">
             <div class="container">
-                <h2 class="about__title">About studio</h2>
+                <h2 class="title">About studio</h2>
 
                 <div class="row">
                     <div class="col-4">
-                        <p class="about__text-lg">Design is not making beauty, beauty emerges from selection, affinities, integration, love.
+                        <p class="text-lg">Design is not making beauty, beauty emerges from selection, affinities, integration, love.
                         </p>
-                        <span class="about__author">— Louis Kahn</span>
+                        <span class="author">— Louis Kahn</span>
                     </div>
                     <div class="col-4">
-                        <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. </p>
+                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. </p>
                     </div>
                     <div class="col-4">
-                        <p class="about__text">Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. Donec vel ultricies purus. Nam dictum sem, eu aliquam ipsum.</p>
+                        <p class="text">Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. Donec vel ultricies purus. Nam dictum sem, eu aliquam ipsum.</p>
                     </div>
                 </div>
-                 <!--/ row-->
+                <!--/ row-->
                 
                 <div class="row">
                     <div class="col-4">
@@ -224,6 +225,131 @@
             </div>
         </section>
         <!-- / section about-->
+        <section class="services">
+            <div class="container">
+                <h3 class="title text-center">Services</h3>
+                <div class="tabs services__tabs" id="services-tabs">
+                    <ul class="services__tabs-list">
+                        <li>
+                            <a class="services__tab" href="#tabs-1">
+                                <span class="services__icon icon-strategy"></span>
+                                <span class="services__icon-text">Branding</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="services__tab" href="#tabs-2">
+                                <span class="services__icon icon-desktop"></span>
+                                <span class="services__icon-text">Web Design</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="services__tab" href="#tabs-3">
+                                <span class="services__icon icon-tools"></span>
+                                <span class="services__icon-text">Graphic Design</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="services__tab" href="#tabs-4">
+                                <span class="services__icon icon-gears"></span>
+                                <span class="services__icon-text">Development</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="services__tab" href="#tabs-5">
+                                <span class="services__icon icon-camera"></span>
+                                <span class="services__icon-text">Photography</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <div id="tabs-1">
+                        <div class="row">
+                            <div class="col-4">
+                                <p class="text-lg">1A brand for a company is like
+                                    a reputation for a person. You earn reputation by trying to do hard things well.
+                                </p>
+                                <span class="author">— Jeff Bezos</span>
+                            </div>
+                            <div class="col-4">
+                                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. </p>
+                            </div>
+                            <div class="col-4">
+                                <p class="text">Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. Donec vel ultricies purus. Nam dictum sem, eu aliquam ipsum.</p>
+                            </div>
+                        </div>
+                        <!--/ row-->
+                    </div>
+                    <div id="tabs-2">
+                        <div class="row">
+                            <div class="col-4">
+                                <p class="text-lg">2A brand for a company is like
+                                    a reputation for a person. You earn reputation by trying to do hard things well.
+                                </p>
+                                <span class="author">— Jeff Bezos</span>
+                            </div>
+                            <div class="col-4">
+                                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. </p>
+                            </div>
+                            <div class="col-4">
+                                <p class="text">Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. Donec vel ultricies purus. Nam dictum sem, eu aliquam ipsum.</p>
+                            </div>
+                        </div>
+                        <!--/ row-->
+                    </div>
+                    <div id="tabs-3">
+                        <div class="row">
+                            <div class="col-4">
+                                <p class="text-lg">3A brand for a company is like
+                                    a reputation for a person. You earn reputation by trying to do hard things well.
+                                </p>
+                                <span class="author">— Jeff Bezos</span>
+                            </div>
+                            <div class="col-4">
+                                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. </p>
+                            </div>
+                            <div class="col-4">
+                                <p class="text">Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. Donec vel ultricies purus. Nam dictum sem, eu aliquam ipsum.</p>
+                            </div>
+                        </div>
+                        <!--/ row-->
+                    </div>
+                    <div id="tabs-4">
+                        <div class="row">
+                            <div class="col-4">
+                                <p class="text-lg">4A brand for a company is like
+                                    a reputation for a person. You earn reputation by trying to do hard things well.
+                                </p>
+                                <span class="author">— Jeff Bezos</span>
+                            </div>
+                            <div class="col-4">
+                                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. </p>
+                            </div>
+                            <div class="col-4">
+                                <p class="text">Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. Donec vel ultricies purus. Nam dictum sem, eu aliquam ipsum.</p>
+                            </div>
+                        </div>
+                        <!--/ row-->
+                    </div>
+                    <div id="tabs-5">
+                        <div class="row">
+                            <div class="col-4">
+                                <p class="text-lg">5A brand for a company is like
+                                    a reputation for a person. You earn reputation by trying to do hard things well.
+                                </p>
+                                <span class="author">— Jeff Bezos</span>
+                            </div>
+                            <div class="col-4">
+                                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. </p>
+                            </div>
+                            <div class="col-4">
+                                <p class="text">Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. Donec vel ultricies purus. Nam dictum sem, eu aliquam ipsum.</p>
+                            </div>
+                        </div>
+                        <!--/ row-->
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--/services-->
         <section class="lets-talk bg-black">
             <div class="container">
                 <div class="row">
@@ -233,7 +359,7 @@
                         </h3>
                         <p class="lets-talk__text">Proin fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor.
                             Integer non dapibus diam, ac eleifend lectus.</p>
-                        <button class="btn">lets talk</button>
+                        <button class="btn btn--default">lets talk</button>
                     </div>
                     <div class="col-6">
                         <img class="lets-talk__img" src="img/monitor.png" alt="iMac-monitor">
@@ -248,8 +374,14 @@
     </footer>
     <!-- / footer -->
 
-    <!-- jquery -->
 
+
+
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+    <!-- jquery UI -->
+    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.min.js" integrity="sha256-hlKLmzaRlE8SCJC1Kw8zoUbU8BxA+8kR3gseuKfMjxA=" crossorigin="anonymous"></script>
 
     <!-- nav scripts-->
     <script src="js/init.js"></script>
