--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
     </header>
     <!-- / header -->
     <main>
-        <section id="about" class="about">
+        <section id="about" class="about section-default">
             <div class="container">
                 <h2 class="title">About studio</h2>
 
@@ -225,7 +225,7 @@
             </div>
         </section>
         <!-- / section about-->
-        <section class="services">
+        <section class="services section-default">
             <div class="container">
                 <h3 class="title text-center">Services</h3>
                 <div class="tabs services__tabs" id="services-tabs">
@@ -350,7 +350,7 @@
             </div>
         </section>
         <!--/services-->
-        <section class="lets-talk bg-black">
+        <section class="lets-talk bg-black section-default">
             <div class="container">
                 <div class="row">
                     <div class="col-6">
@@ -367,15 +367,65 @@
                 </div>
             </div>
         </section>
+        <!--  /lets-talk -->
+        <section class="news section-default">
+            <div class="container">
+                <div class="news__title-wrapper d-flex justify-content-between align-items-center">
+                    <h2 class="title">Latest News</h2>
+                    <a class="news__link" href="#">All News in our blog</a>
+                </div>
+
+                <div class="row">
+                    <div class="col-4">
+                        <article class="news__card">
+                            <a href="#" class="news__card-img">
+                                <img src="img/news0.jpg" alt="news0">
+                            </a>
+                            <div class="news__card-info">
+                                <h5 class="news__card-title">New Web Design Trends</h5>
+                                <span class="news__card-author">John Doe | 10 December</span>
+                                <p class="news__card-description">Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. </p>
+                            </div>
+                            <a href="#" class="btn btn--small btn--angle btn--gray">Read More</a>
+                        </article>
+                    </div>
+                    <div class="col-4">
+                        <article class="news__card">
+                            <a href="#" class="news__card-img">
+                                <img src="img/news1.png" alt="news1">
+                            </a>
+                            <div class="news__card-info">
+                                <h5 class="news__card-title">Minimalistic Design Forever Minimalistic Design ForeverMinimalistic Design Forever</h5>
+                                <span class="news__card-author">John Doe | 9 December</span>
+                                <p class="news__card-description">Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. </p>
+                            </div>
+                            <a href="#" class="btn btn--small btn--angle btn--gray">Read More</a>
+                        </article>
+                    </div>
+                    <div class="col-4">
+                        <article class="news__card">
+                            <a href="#" class="news__card-img">
+                                <img src="img/news2.png" alt="news2">
+                            </a>
+                            <div class="news__card-info">
+                                <h5 class="news__card-title">Hipster’s Style in Web</h5>
+                                <span class="news__card-author">John Doe | 7 December John Doe | 7 December</span>
+                                <p class="news__card-description">Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. </p>
+                            </div>
+                            <a href="#" class="btn btn--small btn--angle btn--gray">Read More</a>
+                        </article>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- / news-->
     </main>
     <!-- /main -->
     <footer>
 
     </footer>
     <!-- / footer -->
-
-
-
 
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
