--- a/src/index.html
+++ b/src/index.html
@@ -368,6 +368,205 @@
             </div>
         </section>
         <!--  /lets-talk -->
+        <section class="portfolio section-default">
+            <div class="container">
+                <h2 class="title text-center">Portfolio</h2>
+                <p class="portfolio__description text-center">In auctor ex id urna faucibus porttitor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. </p>
+            </div>
+
+            <div class="portfolio__tabs" id="portfolio__tabs">
+                <ul class="portfolio__list d-flex justify-content-center">
+                    <li class="portfolio__list-item"><a href="#tabs-1">All Works</a></li>
+                    <li class="portfolio__list-item"><a href="#tabs-2">Branding</a></li>
+                    <li class="portfolio__list-item"><a href="#tabs-3">Design</a></li>
+                    <li class="portfolio__list-item"><a href="#tabs-4">Photography</a></li>
+                </ul>
+                <div id="tabs-1">
+                    <div class="container-fluid">
+                        <div class="portfolio__row">
+                            <div class="portfolio__col">
+                                <div class="portfolio__img">
+                                    <img src="img/port0.jpg" alt="port0">
+                                </div>
+                            </div>
+                            <div class="portfolio__col">
+                                <div class="portfolio__img">
+                                    <img src="img/port5.jpg" alt="port5">
+                                </div>
+                            </div>
+                            <div class="portfolio__col">
+                                <div class="portfolio__img">
+                                    <img src="img/port1.jpg" alt="port1">
+                                </div>
+                            </div>
+                            <div class="portfolio__col">
+                                <div class="portfolio__img">
+                                    <img src="img/port2.jpg" alt="port2">
+                                </div>
+                            </div>
+                            <div class="portfolio__col">
+                                <div class="portfolio__img">
+                                    <img src="img/port3.jpg" alt="port3">
+                                </div>
+                            </div>
+                            <div class="portfolio__col">
+                                <div class="portfolio__img">
+                                    <img src="img/port4.jpg" alt="port4">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="tabs-2">
+                    <div class="container-fluid">
+                        <div class="portfolio__row">
+                            <div class="portfolio__col">
+                                <div class="portfolio__img">
+                                    <img src="img/port4.jpg" alt="port4">
+                                </div>
+                            </div>
+                            <div class="portfolio__col">
+                                <div class="portfolio__img">
+                                    <img src="img/port5.jpg" alt="port5">
+                                </div>
+                            </div>
+                            <div class="portfolio__col">
+                                <div class="portfolio__img">
+                                    <img src="img/port1.jpg" alt="port1">
+                                </div>
+                            </div>
+                            <div class="portfolio__col">
+                                <div class="portfolio__img">
+                                    <img src="img/port2.jpg" alt="port2">
+                                </div>
+                            </div>
+                            <div class="portfolio__col">
+                                <div class="portfolio__img">
+                                    <img src="img/port3.jpg" alt="port3">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="tabs-3">
+                    <div class="container-fluid">
+                        <div class="portfolio__row">
+                            <div class="portfolio__col">
+                                <div class="portfolio__img">
+                                    <img src="img/port4.jpg" alt="port4">
+                                </div>
+                            </div>
+                            <div class="portfolio__col">
+                                <div class="portfolio__img">
+                                    <img src="img/port2.jpg" alt="port2">
+                                </div>
+                            </div>
+                            <div class="portfolio__col">
+                                <div class="portfolio__img">
+                                    <img src="img/port2.jpg" alt="port2">
+                                </div>
+                            </div>
+                            <div class="portfolio__col">
+                                <div class="portfolio__img">
+                                    <img src="img/port3.jpg" alt="port3">
+                                </div>
+                            </div>
+                            <div class="portfolio__col">
+                                <div class="portfolio__img">
+                                    <img src="img/port4.jpg" alt="port4">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="tabs-4">
+                    <div class="container-fluid">
+                        <div class="portfolio__row">
+                            <div class="portfolio__col">
+                                <div class="portfolio__img">
+                                    <img src="img/port4.jpg" alt="port4">
+                                </div>
+                            </div>
+                            <div class="portfolio__col">
+                                <div class="portfolio__img">
+                                    <img src="img/port2.jpg" alt="port2">
+                                </div>
+                            </div>
+                            <div class="portfolio__col">
+                                <div class="portfolio__img">
+                                    <img src="img/port3.jpg" alt="port3">
+                                </div>
+                            </div>
+                            <div class="portfolio__col">
+                                <div class="portfolio__img">
+                                    <img src="img/port1.jpg" alt="port1">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <!--/portfolio-->
+        <section class="start bg-black">
+            <div class="container text-center">
+                <h2 class="title start__title text-white mb-4">Like Our Creative Works?</h2>
+                <a href="#" class="btn btn--default">Start Project</a>
+            </div>
+        </section>
+        <!--/start-->
+        <section class="choose section-default">
+            <div class="container">
+               <h2 class="title choose__title text-center">Why Choose Us?</h2>
+                <div class="row">
+                    <div class="col-4">
+                        <article class="choose__card">
+                            <div class="choose__card-icon icon-flag"></div>
+                            <h5 class="choose__card-title">We’re Creative Creative vguyuy</h5>
+                            <p class="choose__card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim.</p>
+                        </article>
+                    </div>
+                    <div class="col-4">
+                        <article class="choose__card">
+                            <div class="choose__card-icon icon-clock"></div>
+                            <h5 class="choose__card-title">We’re Punctual</h5>
+                            <p class="choose__card-desc">Proin fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend, lorem fermentum orci sit amet, iaculis libero.</p>
+                        </article>
+                    </div>
+                    <div class="col-4">
+                        <article class="choose__card">
+                            <div class="choose__card-icon icon-hotairballoon"></div>
+                            <h5 class="choose__card-title">We’re responsible</h5>
+                            <p class="choose__card-desc">Fusce aliquet quam eget neque ultrices elementum. Nulla posuere felis id arcu blandit sagittis. Eleifend vestibulum purus, sit amet vulputate risus tristique non.</p>
+                        </article>
+                    </div>
+                    <div class="col-4">
+                        <article class="choose__card">
+                            <div class="choose__card-icon icon-heart"></div>
+                            <h5 class="choose__card-title">We have magic</h5>
+                            <p class="choose__card-desc">Curabitur iaculis accumsan augue, nec finibus mauris pretium eu. Duis placerat ex gravida nibh tristique porta. Nulla facilisi. Suspendisse ultricies eros blandit.</p>
+                        </article>
+                    </div>
+                    <div class="col-4">
+                        <article class="choose__card">
+                            <div class="choose__card-icon icon-linegraph"></div>
+                            <h5 class="choose__card-title">We love minimalism</h5>
+                            <p class="choose__card-desc">Cras luctus interdum sodales. Quisque quis odio dui. Sedes sit amet neque malesuada, lobortis  commodo magna ntesque pharetra metus vivera sagittis.</p>
+                        </article>
+                    </div>
+                    <div class="col-4">
+                        <article class="choose__card">
+                            <div class="choose__card-icon icon-chat"></div>
+                            <h5 class="choose__card-title">We're Friendly</h5>
+                            <p class="choose__card-desc">Pulvinar vitae neque et porttitor. Integer non dapibus diam, ac eleifend lectus. Praesent sed nisi eleifend, fermentum orci sit amet, iaculis libero interdum.</p>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--/ choose-->
         <section class="news section-default">
             <div class="container">
                 <div class="news__title-wrapper d-flex justify-content-between align-items-center">
