--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/fontawesome.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/et-line.css">
     <link rel="stylesheet" href="css/style.css">
 
@@ -621,8 +622,25 @@
         <!-- / news-->
     </main>
     <!-- /main -->
-    <footer>
+    <footer class="footer bg-gray d-flex justify-content-center align-items-center">
+        <div class="footer__container">
+            <div class="footer__img ml-auto mr-auto">
+                <img src="img/mountains.png" alt="mountains">
+            </div>
 
+            <nav class="footer__nav d-flex justify-content-center">
+                <a href="#" class="header__btn footer__btn"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="header__btn footer__btn"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="header__btn footer__btn"><i class="fab fa-behance"></i></a>
+                <a href="#" class="header__btn footer__btn"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#" class="header__btn footer__btn"><i class="fab fa-pinterest"></i></a>
+            </nav>
+
+            <div class="footer__copyright text-center">
+                <h5 class="footer__title">© Rhythm 2014</h5>
+                <p class="footer__subtitle">Made with love for great people</p>
+            </div>
+        </div>
     </footer>
     <!-- / footer -->
 
@@ -631,6 +649,8 @@
 
     <!-- jquery UI -->
     <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.min.js" integrity="sha256-hlKLmzaRlE8SCJC1Kw8zoUbU8BxA+8kR3gseuKfMjxA=" crossorigin="anonymous"></script>
+
+    <script src="js/owl.carousel.min.js"></script>
 
     <!-- nav scripts-->
     <script src="js/init.js"></script>
