--- a/src/index.html
+++ b/src/index.html
@@ -568,6 +568,53 @@
             </div>
         </section>
         <!--/ choose-->
+        <section class="say section-default bg-black">
+            <div class="container-fluid">
+                <div id="owl-carousel" class="owl-carousel owl-theme">
+                    <article class="say__item">
+                        <div class="say__img">
+                            <img src="img/say.png" alt="say">
+                        </div>
+                        <h2 class="say__title title text-white">1What people say?</h2>
+                        <p class="say__text">Tru la lPhasellus luctus commodo ullamcorper a posuere rhoncus commodo elit. Aenean congue,
+                            risus utaliquam dapibus. Thanks!</p>
+                        <span class="say__author">— Valia Doe, googesl inc.</span>
+                    </article>
+                    <!-- /say__item-->
+                    <article class="say__item">
+                        <div class="say__img">
+                            <img src="img/say.png" alt="say">
+                        </div>
+                        <h2 class="say__title title text-white">What people say?</h2>
+                        <p class="say__text">Phasellus luctus commodo ullamcorper a posuere rhoncus commodo elit. Aenean congue,
+                            risus utaliquam dapibus. Thanks!</p>
+                        <span class="say__author">— John Doe, doodle inc.</span>
+                    </article>
+                    <!-- /say__item-->
+                    <article class="say__item">
+                        <div class="say__img">
+                            <img src="img/say.png" alt="say">
+                        </div>
+                        <h2 class="say__title title text-white">2What people say?</h2>
+                        <p class="say__text">12312 us luctus commodo ullamcorper a posuere rhoncus commodo elit. Aenean congue,
+                            risus utaliquam dapibus. Thanks!</p>
+                        <span class="say__author">— Anton Gueqqw, doodle inc s.</span>
+                    </article>
+                    <!-- /say__item-->
+                    <article class="say__item">
+                        <div class="say__img">
+                            <img src="img/say.png" alt="say">
+                        </div>
+                        <h2 class="say__title title text-white">3What people say?</h2>
+                        <p class="say__text">1Testyf us luctus commodo ullamcorper a posuere rhoncus commodo elit. Aenean congue,
+                            risus utaliquam dapibus. </p>
+                        <span class="say__author">— Anton Gueqqw, doodle inc s.</span>
+                    </article>
+                    <!-- /say__item-->
+                </div>
+            </div>
+        </section>
+        <!-- /say -->
         <section class="news section-default">
             <div class="container">
                 <div class="news__title-wrapper d-flex justify-content-between align-items-center">
@@ -650,6 +697,7 @@
     <!-- jquery UI -->
     <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.min.js" integrity="sha256-hlKLmzaRlE8SCJC1Kw8zoUbU8BxA+8kR3gseuKfMjxA=" crossorigin="anonymous"></script>
 
+    <!--  carousel-->
     <script src="js/owl.carousel.min.js"></script>
 
     <!-- nav scripts-->
