--- a/src/index.html
+++ b/src/index.html
@@ -615,6 +615,59 @@
             </div>
         </section>
         <!-- /say -->
+
+        <section class="contact section-default">
+            <div class="contact__container">
+                <h2 class="contact__title title text-center">Contact</h2>
+                
+                <div class="row">
+                    <div class="col-4">
+                        <div class="contact__item d-flex align-items-center">
+                            <a type="tel" href="tel:+61 3 8376 6284" class="header__btn contact__btn"><i class="fas fa-phone-alt"></i></a>
+                            <div class="contact__item-info">
+                                <h5 class="contact__item-title">Call us</h5>
+                                <a type="tel" href="tel:+61 3 8376 6284" class="contact__item-tel">+61 3 8376 6284</a>
+                            </div>
+                        </div>
+                    </div> 
+
+                    <div class="col-4">
+                        <div class="contact__item d-flex align-items-center">
+                            <a type="address" href="#" class="header__btn contact__btn"><i class="fas fa-map-marker-alt"></i></a>
+                            <div class="contact__item-info">
+                                <h5 class="contact__item-title">Address</h5>
+                                <a type="address" href="#" class="contact__item-tel"> 245 Quigley Blvd, Ste K</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-4">
+                        <div class="contact__item d-flex align-items-center">
+                            <a type="email" href="email:+61 3 8376 6284" class="header__btn contact__btn"><i class="fas fa-phone-alt"></i></a>
+                            <div class="contact__item-info">
+                                <h5 class="contact__item-title">Email</h5>
+                                <a type="email" href="email: support@bestlooker.pro" class="contact__item-tel">support@bestlooker.pro</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <form action="#" class="contact__form">
+                   <div class="row">
+                       <div class="col-6">
+                           <input class="contact__form-input" type="text" placeholder="Name">
+                           <input class="contact__form-input" type="email" placeholder="Email">
+                           <p class="contact__form-desc"><i class="fas fa-info-circle"></i> All the fields are required</p>
+                       </div>
+                       <div class="col-6 text-right">
+                           <textarea class="contact__form-textarea" name="contact__textarea" id="" placeholder="Message"></textarea>
+                           <button class="contact__form-btn" type="submit">Submit Message</button>
+                       </div>
+                   </div>
+                </form>
+            </div>
+        </section>
+        <!--/contact-->
         <section class="news section-default">
             <div class="container">
                 <div class="news__title-wrapper d-flex justify-content-between align-items-center">
