--- a/src/index.html
+++ b/src/index.html
@@ -48,22 +48,22 @@
                 <h2 class="title">About studio</h2>
 
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-4 col-md-6 col-sm-12">
                         <p class="text-lg">Design is not making beauty, beauty emerges from selection, affinities, integration, love.
                         </p>
                         <span class="author">— Louis Kahn</span>
                     </div>
-                    <div class="col-4">
+                    <div class="col-4 col-md-6 col-sm-12">
                         <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. </p>
                     </div>
-                    <div class="col-4">
+                    <div class="col-4 col-md-6 col-sm-12">
                         <p class="text">Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. Donec vel ultricies purus. Nam dictum sem, eu aliquam ipsum.</p>
                     </div>
                 </div>
                 <!--/ row-->
                 
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-4 col-md-6 col-sm-12">
                         <div class="worker">
 
                             <div class="worker__photo">
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                     <!-- /col-4-->
-                    <div class="col-4">
+                    <div class="col-4 col-md-6 col-sm-12">
                         <div class="worker">
 
                             <div class="worker__photo">
@@ -169,7 +169,7 @@
                         </div>
                     </div>
                     <!-- /col-4-->
-                    <div class="col-4">
+                    <div class="col-4 col-md-6 col-sm-12">
                         <div class="worker">
 
                             <div class="worker__photo">
@@ -677,6 +677,7 @@
                 <p class="contact__form-desc text-center"><i class="fas fa-info-circle"></i> Please trust us, we will never send you spam</p>
             </div>
         </section>
+        <!--/newsletter-->
         <section class="contact section-default">
             <div class="contact__container">
                 <h2 class="contact__title title text-center">Contact</h2>
@@ -729,6 +730,15 @@
             </div>
         </section>
         <!--/contact-->
+        <section class="map-container">
+            <div class="map">
+                <div class="map__bg d-flex flex-column justify-content-center align-items-center text-center">
+                    <div class="header__btn map__btn"><i class="fas fa-map-marker-alt"></i></div>
+                    <h2 class="map__title">Open the map <i class="fas fa-angle-down"></i></h2>
+                </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20218.778561716357!2d29.5925635!3d50.694939000000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x472b0fb6d5ee09b7%3A0x23e8b54aa385af16!2z0J_QtdGB0LrQvtCy0LrQsCwg0JrQuNC10LLRgdC60LDRjyDQvtCx0LvQsNGB0YLRjCwgMDc4MjA!5e0!3m2!1sru!2sua!4v1637168178856!5m2!1sru!2sua" width="100%" height="410" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+        </section>
     </main>
     <!-- /main -->
     <footer class="footer bg-gray d-flex justify-content-center align-items-center">
