--- a/src/index.html
+++ b/src/index.html
@@ -264,16 +264,16 @@
                     </ul>
                     <div id="tabs-1">
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-4 col-md-12">
                                 <p class="text-lg">1A brand for a company is like
                                     a reputation for a person. You earn reputation by trying to do hard things well.
                                 </p>
                                 <span class="author">— Jeff Bezos</span>
                             </div>
-                            <div class="col-4">
+                            <div class="col-4 col-md-12">
                                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. </p>
                             </div>
-                            <div class="col-4">
+                            <div class="col-4 col-md-12">
                                 <p class="text">Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. Donec vel ultricies purus. Nam dictum sem, eu aliquam ipsum.</p>
                             </div>
                         </div>
@@ -521,7 +521,7 @@
             <div class="container">
                <h2 class="title choose__title text-center">Why Choose Us?</h2>
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-4 col-sm-6">
                         <article class="choose__card">
                             <div class="choose__card-icon icon-flag"></div>
                             <h5 class="choose__card-title">We’re Creative Creative vguyuy</h5>
@@ -529,35 +529,35 @@
                                 In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim.</p>
                         </article>
                     </div>
-                    <div class="col-4">
+                    <div class="col-4 col-sm-6">
                         <article class="choose__card">
                             <div class="choose__card-icon icon-clock"></div>
                             <h5 class="choose__card-title">We’re Punctual</h5>
                             <p class="choose__card-desc">Proin fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend, lorem fermentum orci sit amet, iaculis libero.</p>
                         </article>
                     </div>
-                    <div class="col-4">
+                    <div class="col-4 col-sm-6">
                         <article class="choose__card">
                             <div class="choose__card-icon icon-hotairballoon"></div>
                             <h5 class="choose__card-title">We’re responsible</h5>
                             <p class="choose__card-desc">Fusce aliquet quam eget neque ultrices elementum. Nulla posuere felis id arcu blandit sagittis. Eleifend vestibulum purus, sit amet vulputate risus tristique non.</p>
                         </article>
                     </div>
-                    <div class="col-4">
+                    <div class="col-4 col-sm-6">
                         <article class="choose__card">
                             <div class="choose__card-icon icon-heart"></div>
                             <h5 class="choose__card-title">We have magic</h5>
                             <p class="choose__card-desc">Curabitur iaculis accumsan augue, nec finibus mauris pretium eu. Duis placerat ex gravida nibh tristique porta. Nulla facilisi. Suspendisse ultricies eros blandit.</p>
                         </article>
                     </div>
-                    <div class="col-4">
+                    <div class="col-4 col-sm-6">
                         <article class="choose__card">
                             <div class="choose__card-icon icon-linegraph"></div>
                             <h5 class="choose__card-title">We love minimalism</h5>
                             <p class="choose__card-desc">Cras luctus interdum sodales. Quisque quis odio dui. Sedes sit amet neque malesuada, lobortis  commodo magna ntesque pharetra metus vivera sagittis.</p>
                         </article>
                     </div>
-                    <div class="col-4">
+                    <div class="col-4 col-sm-6">
                         <article class="choose__card">
                             <div class="choose__card-icon icon-chat"></div>
                             <h5 class="choose__card-title">We're Friendly</h5>
